# RAG

./: .env  README.md  main.py  pyproject.toml  rag7.py
chroma_langchain_db/: chroma.sqlite3
